Changed to z-index of left menu to 0 trying to make scrolling work on Android, see issue #3

--- a/angular/src/less/moped.less
+++ b/angular/src/less/moped.less
@@ -35,7 +35,7 @@ body {
   width: 240px; 
   background-color: #333;
   color: #eee; 
-  z-index: -1; 
+  z-index: 0; 
 }
 
 .menu .panel {
